--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 body {
     font-family: Times New Roman;
-    background-color; blue;
-    padding: 100x
+    background-color; darkgrey;
+    padding: 1000x
     font-size: 100%
 }
